--- a/app/src/main/res/layout/activity_img_grid.xml
+++ b/app/src/main/res/layout/activity_img_grid.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="?android:attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@null"
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
